<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.jamesnyakush.digipay.ui.auth.viewmodel.AuthViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/register_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        tools:context=".ui.auth.fragment.Register">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="Here’s\nyour first\nstep with \nus! "
                        android:textColor="@color/whiteTextColor" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/this_is_login_svg"
                        android:src="@drawable/ic_login_hero" />
                </RelativeLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputName"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextName"
                                style="@style/modifiedEditText"
                                android:hint="Name"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:text="@={viewmodel.name}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextEmail"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_email_hint"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:text="@={viewmodel.email}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputMobile"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextMobile"
                                style="@style/modifiedEditText"
                                android:hint="@string/mobile_number"
                                android:importantForAutofill="no"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:text="@={viewmodel.phone}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                style="@style/modifiedEditText"
                                android:hint="@string/promocode"
                                android:importantForAutofill="no"
                                android:inputType="text"
                                android:maxLines="1"
                                android:text="@={viewmodel.promocode}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:importantForAutofill="no"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:text="@={viewmodel.password}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/buttons"
                            android:onClick="@{viewmodel::onRegisterButtonClick}"
                            android:text="@string/register"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:onClick="@{viewmodel::onLogin}"
                    android:text="@string/already_have_an_account"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>