<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:orientation="vertical"
    tools:context=".ui.home.mainfrag.HomeFragment">

    <com.custom.sliderimage.logic.SliderImage
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="8dp" />


    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="My Account" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/home_airtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="4dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/circle_indigo">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:padding="16dp"
                                android:src="@drawable/ic_bank"
                                android:visibility="visible" />
                        </FrameLayout>

                        <TextView
                            android:id="@+id/textAirtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_airtime" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_wallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="4dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/circle_yellow">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:padding="16dp"
                                android:src="@drawable/ic_purse"
                                android:visibility="visible" />
                        </FrameLayout>


                        <TextView
                            android:id="@+id/textWallet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_wallet" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_members"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="4dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/circle_green">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:padding="16dp"
                                android:src="@drawable/ic_community"
                                android:visibility="visible" />
                        </FrameLayout>


                        <TextView
                            android:id="@+id/textMembers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_members" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_statement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="4dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/circle_blue">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:padding="16dp"
                                android:src="@drawable/ic_online_payment"
                                android:visibility="visible" />
                        </FrameLayout>

                        <TextView
                            android:id="@+id/textStmt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_statement" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/paybills" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/home_electricity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="4dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/circle_yellow">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:padding="16dp"
                                android:src="@drawable/ic_light_bulb"
                                android:visibility="visible" />
                        </FrameLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|center_horizontal"
                            android:text="@string/title_electricity" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="4dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/circle_blue">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:padding="16dp"
                                android:src="@drawable/ic_television"
                                android:visibility="visible" />
                        </FrameLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_tv" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_water"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="4dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/circle_green">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:padding="16dp"
                                android:src="@drawable/ic_drop"
                                android:visibility="visible" />
                        </FrameLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/title_water" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <FrameLayout
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="4dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/circle_indigo">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:padding="16dp"
                                android:src="@drawable/ic_addrecord"
                                android:visibility="visible" />
                        </FrameLayout>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Nhif" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>



